template view and url work

--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -27,6 +27,6 @@
 <script src="{% static 'js/templatemo.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
 
-{% block js_scripts %}{% endblock %}
+{% block js_script %}{% endblock %}
 </body>
 </html>
