--- a/templates/edit_country.html
+++ b/templates/edit_country.html
@@ -8,18 +8,18 @@
 
 <div class="container">
   <h1>Add Country</h1>
-<form action="#" method="post">
-  {% csrf_token %}
+  <form action="{% url 'saveCountry' %}" method="post">
+    {% csrf_token %}
   
- <div class="form-group"> 
-  {{ form.country_name.label_tag }}
-  {{ form.country_name }}
- </div> 
+    <div class="form-group">
+      {{ form.country_name.label_tag }}
+      {{ form.country_name }}
+    </div>
  
- <div class="form-group mt-3 mb-3">
-  <input type="submit" value="Submit">
- </div> 
-</form>
+    <div class="form-group mt-3 mb-3">
+     <input type="submit" value="Submit">
+    </div>
+  </form>
 
 </div>
 
